data/all_generated_tests/raw_wast_tests/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1288.wast
;; 9. **Test Description:** Create a WASM function that uses `br` multiple times within various nested `block` and `if` structures and after each `br`, calls a function imported from another module.    **Specific Constraint:** This ensures correct control flow and operand stack status recovery after each branch.    **Relation to Control Flow Boundaries:** Ensures robust handling of nested `br` transitions across module calls, verifying stack consistency.

(assert_invalid
  (module
    (import "env" "external_func" (func $external_func))
    (func $test
      (block $outer
        (block $inner
          (br $inner)
          (call $external_func)
        )
        (if (i32.const 1)
          (then
            (br $outer)
            (call $external_func)
          )
        )
      )
    )
  )
  "type mismatch"
)